# vectorscan

./: .clang-tidy  .gitmodules  CHANGELOG-vectorscan.md  CMakeLists.txt  JenkinsFile  Jenkinsfile  LICENSE  README.md  build_vectorscan.sh  cppcheck-suppression-list.txt  run_snort_benchmark.sh  run_tests.sh
benchmarks/: CMakeLists.txt  benchmarks.cpp  benchmarks.hpp  noodle.cpp  shufti.cpp  test_extended_api.cpp  truffle.cpp
cmake/: arch.cmake  archdetect.cmake  cflags-arm.cmake  cflags-generic.cmake  cflags-x86.cmake  config.h.in  osdetection.cmake  platform.cmake  ragel.cmake  setenv-arm64-cross.sh  simde.cmake
debian/: changelog  control  copyright  gbp.conf  libvectorscan-dev.examples  libvectorscan5.lintian-overrides  libvectorscan5.preinst  rules  watch
debian/tests/: build-lib  control  simplegrep.result
debian/upstream/: metadata
doc/dev-reference/: conf.py.in
examples/: patbench.cc  pcapscan.cc  simplegrep.c
src/: crc32.c  database.h  dispatcher.c  hs.cpp  hs_common.h  hs_compile.h  hs_extended_api.cpp  hs_runtime.h  hs_valid_platform.c  runtime.c  scratch.c
src/compiler/: asserts.cpp  compiler.cpp
src/fdr/: fdr.c  fdr_compile.cpp  fdr_confirm_compile.cpp  fdr_dump.cpp  teddy.c  teddy_avx2.c  teddy_compile.cpp  teddy_engine_description.cpp  teddy_fat.cpp
src/hwlm/: hwlm.c  hwlm_build.cpp  hwlm_dump.cpp  noodle_build.cpp  noodle_engine.c  noodle_engine.cpp  (+5 more)
unit/: CMakeLists.txt
util/: CMakeLists.txt  ExpressionParser.rl  cross_compile.cpp  database_util.cpp  ng_corpus_generator.cpp  ng_corpus_generator.h  ng_find_matches.cpp  string_util.h
(+240 files in other folders)
